Atualizado a internacionalização de palavras(PORTUGUÊS FRANCÊS INGLÊS)

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -61,4 +61,36 @@
     <string name="titulo_edita_teste">Modifier le test</string>
     <string name="erro_alterar_teste">Erreur lors du changement de test</string>
     <string name="teste_alterado_sucesso">Test modifié avec succès</string>
+    <string name="titulo_elimina_teste">Supprimer le test</string>
+    <string name="erro_eliminar_teste">Erro ao eliminar teste</string>
+    <string name="teste_eliminado_sucesso">Test éliminé avec succès</string>
+    <string name="alerta">Alerte</string>
+    <string name="titulo_lista_alerta">Alertes</string>
+    <string name="titutlo_novo_alerta">Nouvelle alerte</string>
+    <string name="nome_do_alerta">Nom de l\'alerte</string>
+    <string name="descri_o">La description</string>
+    <string name="preencha_campo_alerta">Remplissez le champ d\'alerte</string>
+    <string name="erro_inserir_alerta">Erreur lors de l\'insertion de l\'alerte</string>
+    <string name="preencha_campo_descricao">Remplissez le champ descriptif</string>
+    <string name="titulo_edita_alerta">Modifier l\'alerte</string>
+    <string name="erro_alterar_alerta">Erreur lors de la modification de l\'alerte</string>
+    <string name="alerta_alterado_sucesso">Alerte modifiée avec succès</string>
+    <string name="eliminar_alerta">Supprimer l\'alerte</string>
+    <string name="alterar_alerta">Alerte de changement</string>
+    <string name="novo_alerta">Nouvelle alerte</string>
+    <string name="erro_eliminar_alerta">Erreur lors de la suppression de l\'alerte</string>
+    <string name="alerta_eliminado_sucesso">Alerte supprimée avec succès</string>
+    <string name="titulo_elimina_alerta">Supprimer l\'alerte</string>
+    <string name="titulo_lista_notificacao">Notification</string>
+    <string name="notifica_o">Notification</string>
+    <string name="resultado">Résultat</string>
+    <string name="erro_inserir_notificacao">Erreur lors de l\'insertion de la notification</string>
+    <string name="titulo_edita_notificacao">Modifier la notification</string>
+    <string name="titulo_nova_notificacao">Nouvelle notification</string>
+    <string name="preencha_campo_resultado">Remplissez le champ de résultat</string>
+    <string name="erro_alterar_notificacao">Erreur lors de la modification de la notification</string>
+    <string name="notificacao_alterada_sucesso">Notification modifiée avec succès</string>
+    <string name="titulo_eliminar_notificacao">Supprimer la notification</string>
+    <string name="erro_eliminar_notificacao">Supprimer la notification</string>
+    <string name="notificacao_eliminada_sucesso">Notification supprimée avec succès</string>
 </resources>
