--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -61,4 +61,36 @@
     <string name="titulo_edita_teste">Editar Teste</string>
     <string name="erro_alterar_teste">Erro ao alterar teste</string>
     <string name="teste_alterado_sucesso">Teste alterado com sucesso</string>
+    <string name="titulo_elimina_teste">Eliminar Teste</string>
+    <string name="erro_eliminar_teste">Erro ao eliminar teste</string>
+    <string name="teste_eliminado_sucesso">Teste eliminado com sucesso</string>
+    <string name="alerta">Alerta</string>
+    <string name="titulo_lista_alerta">Alertas</string>
+    <string name="titutlo_novo_alerta">Novo Alerta</string>
+    <string name="nome_do_alerta">Nome do Alerta</string>
+    <string name="descri_o">Descrição</string>
+    <string name="preencha_campo_alerta">Preencha campo alerta</string>
+    <string name="erro_inserir_alerta">Erro ao inserir alerta</string>
+    <string name="preencha_campo_descricao">Preencha o campo descrição</string>
+    <string name="titulo_edita_alerta">Editar Alerta</string>
+    <string name="erro_alterar_alerta">Erro ao alterar alerta</string>
+    <string name="alerta_alterado_sucesso">Alerta alterado com sucesso</string>
+    <string name="eliminar_alerta">Eliminar Alerta</string>
+    <string name="alterar_alerta">Alterar Alerta</string>
+    <string name="novo_alerta">Novo Alerta</string>
+    <string name="erro_eliminar_alerta">Erro ao eliminar alerta</string>
+    <string name="alerta_eliminado_sucesso">Alerta Eliminado com sucesso</string>
+    <string name="titulo_elimina_alerta">Eliminar Alerta</string>
+    <string name="titulo_lista_notificacao">Notificação</string>
+    <string name="notifica_o">Notificação</string>
+    <string name="resultado">Resultado</string>
+    <string name="erro_inserir_notificacao">Erro ao inserir notificação</string>
+    <string name="titulo_edita_notificacao">Editar Notificação</string>
+    <string name="titulo_nova_notificacao">Nova Notificação</string>
+    <string name="preencha_campo_resultado">Preencha o campo resultado</string>
+    <string name="erro_alterar_notificacao">Erro ao alterar a notificação</string>
+    <string name="notificacao_alterada_sucesso">Notificação alterada com sucesso</string>
+    <string name="titulo_eliminar_notificacao">Eliminar Notificação</string>
+    <string name="erro_eliminar_notificacao">Erro ao eliminar notificação</string>
+    <string name="notificacao_eliminada_sucesso">Notificação eliminada com sucesso</string>
 </resources>
