Criado menu pesquisar

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -93,4 +93,6 @@
     <string name="titulo_eliminar_notificacao">Supprimer la notification</string>
     <string name="erro_eliminar_notificacao">Supprimer la notification</string>
     <string name="notificacao_eliminada_sucesso">Notification supprimée avec succès</string>
+    <string name="titulo_pesquisar">Rechercher</string>
+    <string name="titulo_dados_completo">Données Complètes</string>
 </resources>
